# ncs-zigbee-test-repo

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  debug_log.ini  pm_static.yml  private_key.pem  prj.conf  sysbuild.conf
.github/workflows/: codeql.yml
Wireshark log/: zboss_osif_error_log.yml
Wireshark log/01_03_2024/: frame_1_log_frame.yml  frame_2_log_frame.yml  log_frame_small.txt
Wireshark log/02_02_2024/: Zigbee_UART_Transmissions.pcapng  Zigbee_UART_Transmissions.txt  Zigbee_UART_Transmissions_2.pcapng  Zigbee_UART_Transmissions_2.txt
Wireshark log/04_01_2024/: Zigbee_Wart_UART_Transmissions.pcapng
Wireshark log/05_02_2024/: UART_transmission_log.txt  Zigbee_Wart_UART_Transmissions.pcapng  Zigbee_Wart_UART_Transmissions_2_reinicio_mismo_paquete.pcapng  Zigbee_Wart_UART_Transmissions_2_routers.pcapng  same_frame_restrart_log.txt
Wireshark log/06_02_2024/: error_frame_out.txt  maximun_frames send.txt
Wireshark log/09_01_2014/: Zigbee_Wart_UART_Transmissions.pcapng  Zigbee_Wart_UART_Transmissions_2.pcapng
Wireshark log/11_01_2024/: Zigbee_Wart_UART_Transmissions.pcapng
Wireshark log/16_01_2024/: Zigbee_UART_Transmissions.pcapng  Zigbee_UART_Transmissions_10_registros_leidos.pcapng  log_file_serial_output.txt
Wireshark log/17_01_2024/: Zigbee_UART_Transmissions.pcapng  Zigbee_UART_Transmissions_log2.pcapng
Wireshark log/24_01_2024/: Zigbee_UART_Transmissions.pcapng  Zigbee_UART_Transmissions_before_crash.pcapng
Wireshark log/28_12_2023/: Zigbee_Wart_UART_Transmissions.pcapng
Wireshark log/old_error_logs/: Untitled-1.yml  (+6 more)
script/: shell_command.ps1
src/: Digi_At_commands.c  Digi_At_commands.h  Digi_fota.c  Digi_fota.h  Digi_node_discovery.c  Digi_node_discovery.h  Digi_profile.h  Digi_wireless_at_commands.c  Digi_wireless_at_commands.h  OTA_dfu_target.c  OTA_dfu_target.h  Tcu_Uart.c  Tcu_Uart.h  global_defines.h  main.c  nvram.c  nvram.h  system.c  system.h  zigbee_aps.c  zigbee_aps.h  zigbee_bdb.c  zigbee_bdb.h  zigbee_configuration.c  zigbee_configuration.h  zigbee_device_profile.h
sysbuild/: mcuboot.conf
(+6 files in other folders)
